Prevent flicker on connection create

--- a/src/main/resources/stylesheets/uml.scss
+++ b/src/main/resources/stylesheets/uml.scss
@@ -158,6 +158,7 @@
 
 .html-label {
   position: absolute;
+  transform: translate(-50%, -50%);
 
   width: intrinsic;
   width: -moz-max-content;
